CSS Paragraph spacing smaller, 'Give' link no longer overriding navigation element size

--- a/app/css/mobile.css
+++ b/app/css/mobile.css
@@ -3,7 +3,7 @@
 .page-container { overflow-y:auto }
 
 p {
-	margin: 9px auto;
+	margin: 6px auto;
 }
 
 form {
@@ -100,6 +100,8 @@ div.story {
 	border-left: 6px solid #ff9216;
 	color: #6F6F6F;
 	background-color:#E1E1E1;
+	margin-left: 16px;
+	margin-right: 16px;
 
 	/* Shadow */
 	-webkit-box-shadow: 0px 2px 4px #E1E1E1;
@@ -110,11 +112,9 @@ div.story {
 
 /* Give Link */
 #page-container a.help {
-	height: 38px;
 	width: 100%;
 	background-color: #ff9216;
 	color: white;
-	font-size: 36px;
 	text-align: center;
 	padding-left: 0px;
 	border: solid #d99938 1px;
